# surveyor-micro-toolkit

./: .gitignore  CLAUDE.md  README.md  app.py  dev_run_tests.py  pyproject.toml
docs/: SMT_CLI_Manual.md  SMT_Python_Manual.md  blueprint.md  extensions.md  lesson.md  naming_convention.md
examples/: README.md
notebooks/: 01_horizontal_alignment.ipynb  02_alignment_fitting.ipynb  README.md
reference/: Alignment.gs  AlignmentBuilder.gs  AlignmentBuilderV2.gs  CrossFall.gs  FPMath.gs  SheetFunctions.gs  Surface3D.gs  Vertical.gs  VerticalBuilder.gs  WCB.gs  tables.json
review_logs/: 01_static_analysis.txt  02_naming_audit.txt  03_post_rename_clean.txt  04_coverage_docstring.txt
session_logs/: health_check.md  investigate_build_curve_sub_elements_fix.md  investigate_cosine_arclength_inversion.md  investigate_cosine_builder_mismatch_20260705.md  investigate_cosine_totaly_theta_export.md  investigate_gsheet_port_scope.md  investigate_hor_orr04_pi10_typo.md  investigate_landxml_curve_pi_attrs.md  investigate_landxml_phase2_totaly_export.md  investigate_nocurve_pi.md  investigate_phase3_golden_regen_scope.md  investigate_sinehalfwave_formula.md  investigate_totalx_landxml_fix.md  investigate_transition_label_cleanup_scope.md  investigate_vba_phase4_scope.md  latest.md  plan2_check.md  plan_20260713_0257.md  plan_20260723_1804.md  plan_build_20260628_1902.md  plan_bulk_crosscheck.md  plan_cosine_arclength_core_fix.md  plan_cosine_sinehalfwave_fix.md  plan_flush_pending_fix.md  plan_landxml_20260630_1200.md  plan_landxml_curve_pi_attrs.md  plan_landxml_phase2_closeout.md  (+6 more)
(+61 files in other folders)
